73) Small route speedup.<br>
74) Add send_sigusr_dhcpc sysctl param. Enabled by default. Renew dhcp lease at WAN port status change.<br>
75) More correct vpn restart at WAN dhcp mode.<br>
76) Add ipt_account support. Full work only NatFastpath disabled.<br>
77) Fix add default gateway over static routes.<br>
78) Add Request IP parametr in dhcp client.<br>
79) Add rwfs autoclean at firmware update support.<br>
80) Update dnsmasq to 2.57 version.<br>
81) Fix redial pptp/l2tp at uplink physical disconnect to small time.<br>
82) Speedup route.<br>
83) Some updates in network kernel code.<br>
84) Fix connect to new l2tp brases by Juniper.<br>
85) Correct mac/ip filters in NAT mode.<br>
86) Use extra interrupt in CPU.<br>
87) Rewrite init scripts for lanauth.<br>
88) Add chillispot code in sourcetree and modify webui.<br>
89) Add samba/wins webui.<br>
90) Add dhcp domain oprion support.<br>
91) Update dropbear to 0.53 version.<br>
92) Fix ipt_account webui.<br>
93) Some pppd fixes.<br>
<br>
<b>1.4.x</b><br>
1) Some kernel network/netfilter subsystem fixes.<br>
2) Usb fix some buggy device support.<br>
3) More correct gcc flags for mips arch.<br> 
4) Support __cold gcc attribute in kernel.<br>
5) More fixes for memory subsystem.<br>
6) Small patch for more preempt and speedup.<br>
7) Fix subchannel and country code change.<br>
8) Fix wins webui.<br>
9) Prevent watchdog reset device at serial in/out (poll timer from serial driver).<br>
10) Prevent watchdog reset device at lan rx (poll timer from raeth driver).<br>
11) Update bropbear to 0.53.1 version.<br>

<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://sadnet.ru">sadnet.ru - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>